# ssh-publish

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-commit.yml
ssh_publish/: __main__.py
